--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-google-recaptcha": "^2.1.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.13.1",
+    "sass": "^1.57.0",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
