--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "sass": "^1.57.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "web3-connector": "https://github.com/gatechain/web3-connector#3.2.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
